--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mihir Gujarati</title>
+    <title>Patrick Jane - Full Stack Developer</title>
     <style>
         * {
             margin: 0;
@@ -864,7 +864,7 @@
                 <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#projects">AI in Construction</a></li>
                 <li><a href="#achievements">Achievements</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><button class="theme-toggle">☀️</button></li>
@@ -1087,7 +1087,7 @@
     <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
-            <h2>My Projects</h2>
+            <h2>Weekly Submissions</h2>
             <p class="projects-subtitle">Here are some of my recent projects. Each one demonstrates different skills and technologies.</p>
             
             <div class="projects-grid">
