Final Submited Code

--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
     <section id="projects" class="projects">
         <div class="container">
             <h2>Weekly Submissions</h2>
-            <p class="projects-subtitle">Here you can review all my submitted articles.</p>
+            <p class="projects-subtitle">Here you can review all my submitted Work.</p>
 
             <div class="carousel-container">
                 <button class="carousel-btn carousel-btn-prev" aria-label="Previous projects">
@@ -1515,7 +1515,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- The Role of AI in Cybersecurity:A Cross-Industry Model -->
+                         <!-- The Role of AI in Cybersecurity:A Cross-Industry Model -->
                         <div class="project-card">
                             <div class="project-image">
                                 <div class="placeholder"><img src="Week 11.png" height="400px" width="600px"></div>
@@ -1524,14 +1524,14 @@
                                 <h3>The Role of AI in Cybersecurity:A Cross-Industry Model</h3>
                                 <p>AI strengthens cybersecurity by enhancing threat detection and rapid response.
                                    However, it also introduces new vulnerabilities that demand strong oversight and regulation.</p>
-                                 <div class="project-tech ">
+                               <div class="project-tech">
                                     <span class="tech-tag">Chat GPT</span>
                                     <span class="tech-tag">NotebookLM</span>
                                     <span class="tech-tag">Gamma</span>
                                     <span class="tech-tag">Powerpoint Presentation</span>
                                 </div>
                                 <div class="project-links">
-                                    <a href="https://drive.google.com/drive/folders/1J7ywEQWys5Yo87NSuS5spi7L3geuMkDu?usp=sharing" class="project-link">
+                                   <a href="https://drive.google.com/drive/folders/1J7ywEQWys5Yo87NSuS5spi7L3geuMkDu?usp=sharing" class="project-link">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
                                            <path fill-rule="evenodd" clip-rule="evenodd" d="m2 2 1-1h9l1 1v12l-1 1H3l-1-1zm1 0v12h9V2zm1 2 1-1h5l1 1v1l-1 1H5L4 5zm1 0v1h5V4zm10 1h-1v2h1zm-1 3h1v2h-1zm1 3h-1v2h1z"/></svg>
                                         NotebookLM
@@ -1539,6 +1539,31 @@
                                     <a href="https://drive.google.com/drive/folders/1J7ywEQWys5Yo87NSuS5spi7L3geuMkDu?usp=sharing" class="project-link">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  viewBox="0 0 48 48" fill="currentColor" xml:space="preserve"><path d="M47.987 21.938a1 1 0 0 0-.053-.264c-.011-.032-.019-.063-.033-.094a1 1 0 0 0-.193-.285l-.001-.001L42 15.586V10c0-.022-.011-.041-.013-.063a1 1 0 0 0-.051-.257c-.011-.032-.019-.063-.034-.094a1 1 0 0 0-.196-.293l-9-9a1 1 0 0 0-.294-.197q-.044-.018-.09-.032a1 1 0 0 0-.265-.053C32.038.01 32.02 0 32 0H7a1 1 0 0 0-1 1v14.586L.293 21.293l-.002.002a1 1 0 0 0-.192.285c-.014.031-.022.062-.033.094a1 1 0 0 0-.053.264C.011 21.96 0 21.978 0 22v19a1 1 0 0 0 1 1h5v5a1 1 0 0 0 1 1h34a1 1 0 0 0 1-1v-5h5a1 1 0 0 0 1-1V22c0-.022-.011-.04-.013-.062M44.586 21H42v-2.586zm-6-12H33V3.414zM8 2h23v8a1 1 0 0 0 1 1h8v10H8zM6 18.414V21H3.414zM40 46H8v-4h32zm6-6H2V23h44z"/><path d="M29.1 27.698h2.261V38h2.006V27.698h2.261v-1.734H29.1zm-1.437-.978a2.8 2.8 0 0 0-1.097-.586 4.5 4.5 0 0 0-1.19-.17h-3.332V38h2.006v-4.828h1.428q.629 0 1.224-.221a2.9 2.9 0 0 0 1.054-.68q.459-.459.74-1.148t.281-1.606q0-1.02-.315-1.7c-.315-.68-.476-.819-.799-1.097m-1.283 4.285q-.459.501-1.173.501h-1.156v-3.825h1.156q.714 0 1.173.442t.459 1.411-.459 1.471m-7.131-4.285a2.8 2.8 0 0 0-1.097-.586 4.5 4.5 0 0 0-1.19-.17H13.63V38h2.006v-4.828h1.428q.628 0 1.224-.221a2.9 2.9 0 0 0 1.054-.68q.459-.459.74-1.148t.281-1.606q0-1.02-.315-1.7a3.2 3.2 0 0 0-.799-1.097m-1.284 4.285q-.459.501-1.173.501h-1.156v-3.825h1.156q.714 0 1.173.442t.459 1.411-.459 1.471"/></svg> 
                                   Presentation
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- All Assignments-->
+                        <div class="project-card">
+                            <div class="project-image">
+                                <div class="placeholder"><img src="All Assignments.png" height="400px" width="600px"></div>
+                            </div>
+                            <div class="project-info">
+                                <h3> AI In Construction all assignments</h3>
+                                <p>As of now I have kept all the assignments in this one folder
+                                   I plan to create a seperate theme tab for each once all the assignments get completed.</p>
+                                 <div class="project-tech ">
+                                    <span class="tech-tag">Chat GPT</span>
+                                    <span class="tech-tag">NotebookLM</span>
+                                    <span class="tech-tag">Gamma</span>
+                                    <span class="tech-tag">Powerpoint Presentation</span>
+                                    <span class="tech-tag">Microsoft Excel</span>
+                                </div>
+                                <div class="project-links">
+                                    <a href="https://drive.google.com/drive/folders/1u24e85W7owCbtzL8mSwqkY8eB8ZvLpKm?usp=sharing" class="project-link">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
+                                           <path fill-rule="evenodd" clip-rule="evenodd" d="m2 2 1-1h9l1 1v12l-1 1H3l-1-1zm1 0v12h9V2zm1 2 1-1h5l1 1v1l-1 1H5L4 5zm1 0v1h5V4zm10 1h-1v2h1zm-1 3h1v2h-1zm1 3h-1v2h1z"/></svg>
+                                        Source 
                                     </a>
                                 </div>
                             </div>
