fix: remove unnecessary query param from favicon

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="robots" content="index, follow" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/profileimage.png?v=1" />
-    <link rel="apple-touch-icon" href="/profileimage.png?v=1" />
+    <link rel="icon" type="image/png" href="/profileimage.png" />
+    <link rel="apple-touch-icon" href="/profileimage.png" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
