--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
   <body>
     <!-- Main container for React application -->
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
